2002-10-06 Araki Ken <arakiken@users.sf.net>

	* copy_paste_via_ucs option is renamed to receive_string_via_ucs.
	  And if its value is true, strings from XIM as well as from X Selection are 
	  converted to UCS once.
	* Even if the value of fade_ratio option was 100, screen was completely redrawn
	  when window focus is switched. fixed.

2002-10-05 Araki Ken <arakiken@users.sf.net>

	* Cleaned up size hint patch(see 2002-08-29) by Sato Seiichi san.
	* If window height was for only one line, where wraparound happened,
	  mlterm died. fixed.

2002-10-02 Araki Ken <arakiken@users.sf.net>

	* If line characters and RTL characters mixed in a line, screen corrupt.
	  Fixed a little.
	  (Thanks to Nadim Shaikli)

2002-10-02 Araki Ken <arakiken@users.sf.net>

	* Scrollbar never get too small even if the value of 'logsize' option
	  is huge.

2002-10-01 Araki Ken <arakiken@users.sf.net>

	* If more than 512 bytes were copy&pasted within a window, the 513th byte
	  was lost. fixed.
	  (Thanks to Nanashi san)

2002-09-29 Araki Ken <arakiken@users.sf.net>

	* Character encoding parser is reset by ESC c sequence.
	  (Thanks to Murase Masaki san)

2002-09-29 Araki Ken <arakiken@users.sf.net>

	* ESC [ I and ESC [ Z sequences are supported.

2002-09-28 Araki Ken <arakiken@users.sf.net>

	* If cursor was placed at a half-width char preceded by a full-width char and
	  the full-width char was deleted by "ESC [ 2 P", the half-width char was also 
	  deleted. fixed.
	  (Thanks to Hideki EIRAKU san)

2002-09-28 Araki Ken <arakiken@users.sf.net>

	* "Full reset" button of mlconfig didn't work. fixed.
	  (Thanks to Murase Masaki san)

2002-09-28 Seiichi SATO <ssato@sh.rim.or.jp>

	* x_window_get_visible_geometry() returned width and height of no
	  visible window. fiexd.

2002-09-27 Araki Ken <arakiken@users.sf.net>

	* GDK_PIXBUF_CFLAGS and IMILB_CFLAGS are renamed to IMAGELIB_CFLAGS in 
	  tool/mlconfig/Makefile.in.
	  (Thanks to Muto Kenshi san)
